--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,7 @@
 name: Deploy to Preview Channel
 
 on:
-  pull_request:
-    # Optionally configure to run only for specific files. For example:
-    paths:
-    - "master/**"
+  pull_request
 
 jobs:
   build_and_preview:
