--- a/firebase.json
+++ b/firebase.json
@@ -9,12 +9,6 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
     ]
   },
   "emulators": {
@@ -27,5 +21,8 @@
     "ui": {
       "enabled": false
     }
+  },
+  "storage": {
+    "rules": "storage.rules"
   }
 }
