--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,3 +18,5 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_VROCK691 }}'
           channelId: live
           projectId: vrock691
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
